--- a/about.html
+++ b/about.html
@@ -6,6 +6,12 @@
 	<title>微氏玉映簡介</title>
 </head>
 <body>
+	微氏玉映
+	Vi Thi Ngoc Anh
 
+	個人網頁：https://www1.pu.edu.tw/~wihyyn
+	IG：https://www.instagram.com/_cerlyvi_
+	Tel: 04-26328001#18110
+	E-Mail: s1103158@gm.pu.edu.tw
 </body>
 </html>
