--- a/about.html
+++ b/about.html
@@ -9,9 +9,10 @@
 	<h1>微氏玉映</h1>
 	<h2>Vi Thi Ngoc Anh</h2>
 
-	個人網頁：https://www1.pu.edu.tw/~wihyyn<br>
-	IG：https://www.instagram.com/_cerlyvi_<br>
-	Tel: 04-26328001#18110<br>
-	E-Mail: s1103158@gm.pu.edu.tw<br>
+	個人網頁：<a href="https://www1.pu.edu.tw/~wihyyn">https://www1.pu.edu.tw/~wihyyn</a><br>
+	IG：<a href="https://www.instagram.com/_cerlyvi_"
+	target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
+	Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
+	E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
 </body>
 </html>
