--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	<title>微氏玉映簡介</title>
 </head>
 <body>
+	<img src="cliff.jpg"></img>
 	<h1>微氏玉映</h1>
 	<h2>Vi Thi Ngoc Anh</h2>
 
@@ -14,5 +15,14 @@
 	target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
 	Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
 	E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
+
+	大象席地而坐電影配樂<br>
+
+	<audio controls>
+		<source src="elephant.mp3" type="audio/mP3">
+	</audio><br>
+
+	不要去臺灣<br>
+	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 </body>
 </html>
