--- a/about.html
+++ b/about.html
@@ -6,23 +6,42 @@
 	<title>微氏玉映簡介</title>
 </head>
 <body>
-	<img src="cliff.jpg"></img>
-	<h1>微氏玉映</h1>
-	<h2>Vi Thi Ngoc Anh</h2>
+	<table width="70%" border="1">
+		<tr>
+			<td>
+				<img src="cliff.jpg" width="110%"></img>
+			</td>
 
-	個人網頁：<a href="https://www1.pu.edu.tw/~wihyyn">https://www1.pu.edu.tw/~wihyyn</a><br>
-	IG：<a href="https://www.instagram.com/_cerlyvi_"
-	target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
-	Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
-	E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
+			<td>
+				<h1>微氏玉映</h1>
+				<h2>Vi Thi Ngoc Anh</h2>
+			</td>
+		</tr>
+	</table>
 
-	大象席地而坐電影配樂<br>
+	<table width="70%" border="1">
+		<tr>
+			<td>
+				個人網頁：<a href="https://www1.pu.edu.tw/~wihyyn">https://www1.pu.edu.tw/~wihyyn</a><br>
+				IG：<a href="https://www.instagram.com/_cerlyvi_"
+				target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
+				Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
+				E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
+			</td>
 
-	<audio controls>
-		<source src="elephant.mp3" type="audio/mP3">
-	</audio><br>
+			<td>
+				大象席地而坐電影配樂<br>
+				<audio controls>
+					<source src="elephant.mp3" type="audio/mP3">
+				</audio><br>
+			</td>
+			
+			<td>
+				不要去臺灣<br>
+				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+			</td>
+		</tr>
+	</table>
 
-	不要去臺灣<br>
-	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
 </body>
 </html>
