--- a/about.html
+++ b/about.html
@@ -49,6 +49,8 @@
 				wihyynAgent<br>
 				<iframe height="430" width="350" src="https://bot.dialogflow.com/5f615dad-ceae-4c55-b104-335dcc7fc39c"></iframe>
 			</td>
+		</tr>
+	</table>
 
 </body>
 </html>
