--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	<a href="https://www.104.com.tw/" target="me">104人力銀行</a><br>
 
 	<iframe width="800" height="600" 
-	src="https://www.youtube.com/embed/g6t6hAht24E" name="me"></iframe>
+		src="https://www.youtube.com/embed/g6t6hAht24E" 
+		name="me"
+		style="width:100%; height:100vh;" 
+		>	
+	</iframe>
 
 </body>
 </html>
