--- a/rwd.html
+++ b/rwd.html
@@ -25,6 +25,12 @@
 
 </head>
 <body>
+	<ul>
+		<li>關於我</li>
+		<li>電影配樂</li>
+		<li>推薦影片</li>
+	</ul>
+	
 	<table width="70%" border="1">
 		<tr>
 			<td>
