--- a/rwd.html
+++ b/rwd.html
@@ -11,6 +11,9 @@
 		h2 {color:#33ff33; font-size:40px;}
 	</style>
 
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 	<script>
 		function change1() {
 			document.getElementById("pic").src = "mountain.jpg";
@@ -34,61 +37,38 @@
 	</nav>
 
 
-	<main>
-		<table width="70%" border="1">
-			<tr>
-				<td>
-					<img src="cliff.jpg" width="110%"
-					id="pic"onmouseover="change1()" onmouseout="change2()"></img>
-				</td>
+	<main class="container-fluid bg-primary text-white text-center">
+		<img src="cliff.jpg" width="110%" id="pic" onmouseover="change1()" onmouseout="change2()"></img>
 
-				<td>
-					<h1>微氏玉映</h1>
-					<h2>Vi Thi Ngoc Anh</h2>
-				</td>
-			</tr>
-		</table>
+		<div class="row">
 
+			<section class="col-lg-4">
+				<h3 id="wihyyn">微氏玉映(Vi Thi Ngoc Anh)</h3>
+				個人網頁：<a href="https://www1.pu.edu.tw/~s1103158">https://www1.pu.edu.tw/~s1103158</a><br>
+				IG：<a href="https://www.instagram.com/_cerlyvi_"
+				target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
+				Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
+				E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
+			</section>
 
-		<table width="70%" border="1">
-			<tr>
-				<td>
-					<h3 id="wihyyn">微氏玉映(Vi Thi Ngoc Anh)</h3>
-					個人網頁：<a href="https://www1.pu.edu.tw/~wihyyn">https://www1.pu.edu.tw/~wihyyn</a><br>
-					IG：<a href="https://www.instagram.com/_cerlyvi_"
-					target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
-					Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
-					E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
-				</td>
-
-				<td>
-					<h3 id="soundtrack">電影配樂</h3>
-					大象席地而坐電影配樂<br>
-					<audio controls>
-						<source src="elephant.mp3" type="audio/mP3">
-					</audio><br>
-				</td>
+			<section class="col-lg-4">
+				<h3 id="soundtrack">電影配樂</h3>
+				大象席地而坐電影配樂<br>
+				<audio controls>
+					<source src="elephant.mp3" type="audio/mP3">
+				</audio><br>
+			</section>
 			
-				<td>
-					<h3 id="youtube">推薦影片</h3>
-					不要去臺灣<br>
-					<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
-				</td>
-			</tr>
-		</table>
-
-		<table width="70%" border="1">
-			<tr>
-				<td>
-					wihyynAgent<br>
-					<iframe height="430" width="350" src="https://bot.dialogflow.com/5f615dad-ceae-4c55-b104-335dcc7fc39c"></iframe>
-				</td>
-			</tr>
-		</table>
+			<section class="col-lg-4">
+				<h3 id="youtube">推薦影片</h3>
+				不要去臺灣<br>
+				<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+			</section>
+		</div>
 	</main>
 
 	<footer>
-		Copyright ©  楊子青. All Rights Reserved.
+		Copyright ©  微氏玉映. All Rights Reserved.
 	</footer>
 
 </body>
