--- a/rwd.html
+++ b/rwd.html
@@ -9,6 +9,7 @@
 		* { font-family:"標楷體"; margin-left:auto; margin-right:auto;}
 		h1 {color:blue; font-size:60px;}
 		h2 {color:#33ff33; font-size:40px;}
+		.col-lg-4 {border: 1px solid;}
 	</style>
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -57,11 +58,11 @@
 
 			<section class="col-lg-4">
 				<h3 id="wihyyn">微氏玉映(Vi Thi Ngoc Anh)</h3>
-				個人網頁：<a href="https://www1.pu.edu.tw/~s1103158">https://www1.pu.edu.tw/~s1103158</a><br>
-				IG：<a href="https://www.instagram.com/_cerlyvi_"
+				個人網頁：<a href="https://www1.pu.edu.tw/~s1103158" class="text-decoration-none text-white bg-info">https://www1.pu.edu.tw/~s1103158</a><br>
+				IG：<a href="https://www.instagram.com/_cerlyvi_" class="text-decoration-none text-white bg-info"
 				target="_blank">https://www.instagram.com/_cerlyvi_</a><br>
-				Tel: <a href="tel:0426328001,18110">04-26328001#18110</a><br>
-				E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw">s1103158@gm.pu.edu.tw</a><br>
+				Tel: <a href="tel:0426328001,18110" class="text-decoration-none text-white bg-info">04-26328001#18110</a><br>
+				E-Mail: <a href="mailto:s1103158@gm.pu.edu.tw" class="text-decoration-none text-white bg-info">s1103158@gm.pu.edu.tw</a><br>
 			</section>
 
 			<section class="col-lg-4">
